<resources>
    <string name="app_name">Tug Of Logic</string>
    <string name="title">Welcome to Tug Of Logic</string>
    <string name="emailLabel">"Email: "</string>
    <string name="passwordLabel">Password:</string>
    <string name="gameIDLabel">"Game ID: "</string>
    <string name="gamIdLabel">"Game ID: "</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="confirmPwd">Confirm Password</string>
    <string name="enter">Enter</string>
    <string name="name">Name:</string>
    <string name="mainclaim">Main Claim</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="Role">Role:</string>
    <string name="submit">Submit</string>
    <string name="RIP">Reason In Play</string>
    <string name="refresh">Refresh</string>
    <string name="timer">Timer</string>
    <string name="next">Next</string>
    <string name="Results">Result</string>
    <string name="createGame">New Game</string>
    <string name="signout">Sign out</string>
    <string name="MainClaimVoting">Main Claim Voting</string>
    <string name="startVote">Start Vote</string>
    <string name="Accept">Accept</string>
    <string name="Decline">Decline</string>
    <string name="StartDebate">Start Debate</string>
    <string name="ripDebate">Reason In Play Debate</string>
    <string name="ripresults">Reason In Play Results</string>
    <string-array name="spinnerItems">
        <item>Fecilitator</item>
        <item>Student</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_admin_main_claim_final_voting">AdminMainClaimFinalVotingActivity
    </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>