<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical"
    tools:context=".User.MainClaimFinalVotingDisplayUser">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shadow4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mainclaimLabel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/mainclaim"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMCDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/montserrat"
            android:text="Main Claim is loading"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            android:textSize="18sp" />


        <RadioGroup
            android:id="@+id/radioGroupFinal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/trueRadioBtn"
                style="@android:style/Widget.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/agree"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/falseRadioBtn"
                style="@android:style/Widget.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/disagree"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RadioGroup>

        <Button
            android:id="@+id/submitVote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="60dp"
            android:layout_weight="1"
            android:background="@color/backgroundColor"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/submitVote2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="60dp"
            android:layout_weight="1"
            android:background="@color/backgroundColor"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
